# octal

./: .gitignore  Cargo.toml  README.md
results/0.014/: 1024  1048576  1073741824  128  131072  134217728  137438953472  16  16384  16777216  17179869184  2048  2097152  2147483648  256  262144  268435456  32  32768  33554432  34359738368  4096  4194304  4294967296  512  524288  536870912  64  65536  67108864  68719476736  8192  8388608  8589934592
results/0.034/: 1024  1048576  1073741824  128  131072  134217728  137438953472  16  16384  16777216  17179869184  2048  2097152  2147483648  256  262144  268435456  274877906944  32  32768  33554432  34359738368  4096  4194304  4294967296  512  524288  536870912  64  65536  67108864  68719476736  8192  8388608  8589934592
results/0.161/: 1024  1048576  1073741824  128  131072  134217728  137438953472  16  16384  16777216  17179869184  2048  2097152  2147483648  256  262144  268435456  274877906944  32  32768  33554432  34359738368  4  4096  4194304  4294967296  512  524288  536870912  549755813888  64  65536  67108864  68719476736  8192  8388608  8589934592
results/0.167/: 1024  1048576  1073741824  1099511627776  128  131072  134217728  137438953472  16  16384  16777216  17179869184  2048  2097152  2147483648  2199023255552  256  262144  268435456  274877906944  32  32768  33554432  34359738368  4096  4194304  4294967296  512  524288  536870912  549755813888  64  65536  67108864  68719476736  8  8192  8388608  8589934592
results/0.172/: 1024  1048576  1073741824  (+32 more)
src/: bin.rs  game.rs  main.rs  nimber_set.rs  octal.rs
