[package]
name = "octal"
version = "0.1.0"
edition = "2021"
default-run = "octal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
cfg-if = "1.0.0"
glob = "0.3.1"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"


# for profiling
[profile.release]
debug = true

[[bin]]
name = "octal"
path = "src/main.rs"

[[bin]]
name = "b"
path = "src/bin.rs"


[features]
nimber_u8 = []
nimber_u16 = []
nimber_u32 = []
nimber_u64 = []
nimber_u128 = []
bits_u32 = []
bits_u64 = []
bits_u128 = []
bits_bitvec = []
# default = ["bits_u64"]
